src/test/ui/nll/capture-ref-in-struct.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/capture-ref-in-struct.rs:18:16
   |
LL |             y: &y,
   |                ^^ borrowed value does not live long enough
...
LL |     }
   |     - `y` dropped here while still borrowed
LL | 
LL |     deref(p);
   |           - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
